# tau2-purple-agent

./: .env.example  Dockerfile  amber-manifest.json5  pyproject.toml
.github/workflows/: publish.yml
src/: agent.py  executor.py  prompts.py  server.py
